--- a/test_1.html
+++ b/test_1.html
@@ -204,6 +204,7 @@
     <dt>Cinéma</dt>
         <dd>Harry Potter</dd>
         <dd>Matrix</dd>
+        <dd>Mission Impossible</dd>
         <dd></dd>
     </div>    
 
@@ -219,6 +220,7 @@
         <dd>Dragon Ball</dd>
         <dd>Hunter x Hunter</dd>
         <dd>Pokémon</dd>
+        <dd>Attaque des titans</dd>
    </div>
 
   <div>
